# GEFS

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
assets/shaders/test_cube/: config.json  test_cube.frag
assets/shaders/test_tri/: config.json
src/: application.rs  lib.rs  main.rs
src/core/: input.rs  mod.rs  storage.rs
src/core/graphics/: mod.rs  pipeline.rs  pipeline_manager.rs  resource_manager.rs  shader.rs  shader_manager.rs  texture.rs
src/test/: cube.rs  mod.rs
src/utils/: mod.rs  render_target.rs  window.rs
