[package]
name = "GEFS"
version = "0.1.0"
authors = ["lemonhx"]
edition = "2018"

[lib]
name = "libgefs"
path = "src/lib.rs"

[[demo1]]
name = "demo1"
path = "src/main.rs"


[dependencies]
# fuck rust
ctor = "0.1.16"
futures = "0.3"
async-std = "1.7.0"

# windowing
winit = "0.23.0"

# gamepads
gilrs = "0.8.0"

# graphics
wgpu = "0.6.0"

# physics
nphysics3d = "0.18"
bvh = "0.3"

# linear math
nalgebra = "0.23"
nalgebra-glm = "0.3"
# audio
ambisonic = "0.3"

# utils
## module loading
gltf = "0.15.2"
obj-rs = "0.6.2"
## image loading
image = "0.23.6"
## audio loading(pending) // we have rodio in ambisonic
## text to texture(pending)
rusttype = "0.9.2"
## scripting language(pending) // python? pyo3
## serialize
serde = "1.0"
serde_json = "1.0"



# # platform specific
# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3.9", features = ["windef", "winuser"] }

# [target.'cfg(target_os = "macos")'.dependencies]
# cocoa = "0.20.2"
# objc = "0.2.7"