[package]
name = "GEFS"
version = "0.1.0"
authors = ["lemonhx"]
edition = "2018"

[lib]
name = "libgefs"
path = "src/lib.rs"

[[demo1]]
name = "demo1"
path = "src/main.rs"


[dependencies]
# fuck rust
ctor = "0.1"
futures = "0.3"
async-std = "1.7"
async-trait = "0.1"
rayon = "1.5"

# windowing
winit = "0.23"

# gamepads
gilrs = "0.8"

# graphics
wgpu = "0.6"

# physics
nphysics3d = "0.18"
bvh = "0.3"

# linear math
nalgebra = "0.23"
nalgebra-glm = "0.9"
# audio
ambisonic = "0.3"

# utils
## module loading
gltf = "0.15"
obj-rs = "0.6"
## image loading
image = "0.23"
## audio loading(pending) // we have rodio in ambisonic
## text to texture(pending)
rusttype = "0.9"
## scripting language(pending) // python? pyo3
## serialize
serde = "1.0"
serde_json = "1.0"



# # platform specific
# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3.9", features = ["windef", "winuser"] }

# [target.'cfg(target_os = "macos")'.dependencies]
# cocoa = "0.20.2"
# objc = "0.2.7"